[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Main/Main.gd" type="Script" id=1]
[ext_resource path="res://scenes/UI/HUD/HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Map/Lush Praire/LushPrairie.tres" type="TileSet" id=3]
[ext_resource path="res://scenes/UI/MainMenu/MainMenu.tscn" type="PackedScene" id=4]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 2, 2 )
tile_set = ExtResource( 3 )
cell_size = Vector2( 24, 24 )
format = 1
tile_data = PoolIntArray( 0, 1, 0, 1, 1, 1, 2, 1, 1, 3, 1, 1, 4, 1, 1, 5, 1, 4, 6, 1, 4, 7, 1, 1, 8, 1, 4, 9, 1, 4, 10, 1, 1, 11, 1, 4, 12, 1, 4, 13, 1, 4, 14, 1, 1, 15, 1, 4, 16, 1, 1, 17, 1, 1, 18, 1, 1, 19, 1, 1, 20, 1, 2, 65536, 1, 65536, 65537, 1, 983040, 65538, 1, 131073, 65539, 1, 131076, 65540, 1, 131076, 65541, 1, 131073, 65542, 1, 131076, 65543, 1, 131073, 65544, 1, 131076, 65545, 1, 131073, 65546, 1, 131076, 65547, 1, 131073, 65548, 1, 131073, 65549, 1, 131073, 65550, 1, 131073, 65551, 1, 131073, 65552, 1, 131073, 65553, 1, 131073, 65554, 1, 131073, 65555, 1, 983041, 65556, 1, 65538, 131072, 1, 65539, 131073, 1, 65541, 131074, 0, 0, 131075, 0, 1, 131076, 0, 1, 131077, 0, 1, 131078, 0, 1, 131079, 0, 1, 131080, 0, 1, 131081, 0, 1, 131082, 0, 1, 131083, 0, 1, 131084, 0, 1, 131085, 0, 1, 131086, 0, 1, 131087, 0, 1, 131088, 0, 1, 131089, 0, 1, 131090, 0, 2, 131091, 1, 65539, 131092, 1, 65541, 196608, 1, 65539, 196609, 1, 65541, 196610, 0, 65536, 196611, 0, 65537, 196612, 0, 65537, 196613, 0, 65537, 196614, 0, 65537, 196615, 0, 65537, 196616, 0, 65537, 196617, 0, 65537, 196618, 0, 65537, 196619, 0, 65537, 196620, 0, 65537, 196621, 0, 65537, 196622, 0, 65537, 196623, 0, 65537, 196624, 0, 65537, 196625, 0, 65537, 196626, 0, 65538, 196627, 1, 65539, 196628, 1, 65538, 262144, 1, 65536, 262145, 1, 65541, 262146, 0, 65536, 262147, 0, 65537, 262148, 0, 65537, 262149, 0, 65537, 262150, 0, 65537, 262151, 0, 65537, 262152, 0, 65537, 262153, 0, 65537, 262154, 0, 65537, 262155, 0, 65537, 262156, 0, 65537, 262157, 0, 65537, 262158, 0, 65537, 262159, 0, 65537, 262160, 0, 65537, 262161, 0, 65537, 262162, 0, 65538, 262163, 1, 65536, 262164, 1, 65538, 327680, 1, 65536, 327681, 1, 65541, 327682, 0, 65536, 327683, 0, 65537, 327684, 0, 65537, 327685, 0, 65537, 327686, 0, 65537, 327687, 0, 65537, 327688, 0, 65537, 327689, 0, 65537, 327690, 0, 65537, 327691, 0, 65537, 327692, 0, 65537, 327693, 0, 65537, 327694, 0, 65537, 327695, 0, 65537, 327696, 0, 65537, 327697, 0, 65537, 327698, 0, 65538, 327699, 1, 65536, 327700, 1, 65538, 393216, 1, 65539, 393217, 1, 65538, 393218, 0, 65536, 393219, 0, 65537, 393220, 0, 65537, 393221, 0, 65537, 393222, 0, 65537, 393223, 0, 65537, 393224, 0, 65537, 393225, 0, 65537, 393226, 0, 65537, 393227, 0, 65537, 393228, 0, 65537, 393229, 0, 65537, 393230, 0, 65537, 393231, 0, 65537, 393232, 0, 65537, 393233, 0, 65537, 393234, 0, 65538, 393235, 1, 65536, 393236, 1, 65541, 458752, 1, 65539, 458753, 1, 65541, 458754, 0, 65536, 458755, 0, 65537, 458756, 0, 65537, 458757, 0, 65537, 458758, 0, 65537, 458759, 0, 65537, 458760, 0, 65537, 458761, 0, 65537, 458762, 0, 65537, 458763, 0, 65537, 458764, 0, 65537, 458765, 0, 65537, 458766, 0, 65537, 458767, 0, 65537, 458768, 0, 65537, 458769, 0, 65537, 458770, 0, 65538, 458771, 1, 65536, 458772, 1, 65541, 524288, 1, 65539, 524289, 1, 65541, 524290, 0, 65536, 524291, 0, 65537, 524292, 0, 65537, 524293, 0, 65537, 524294, 0, 65537, 524295, 0, 65537, 524296, 0, 65537, 524297, 0, 65537, 524298, 0, 65537, 524299, 0, 65537, 524300, 0, 65537, 524301, 0, 65537, 524302, 0, 65537, 524303, 0, 65537, 524304, 0, 65537, 524305, 0, 65537, 524306, 0, 65538, 524307, 1, 65536, 524308, 1, 65538, 589824, 1, 65536, 589825, 1, 65541, 589826, 0, 65536, 589827, 0, 65537, 589828, 0, 65537, 589829, 0, 65537, 589830, 0, 65537, 589831, 0, 65537, 589832, 0, 65537, 589833, 0, 65537, 589834, 0, 65537, 589835, 0, 65537, 589836, 0, 65537, 589837, 0, 65537, 589838, 0, 65537, 589839, 0, 65537, 589840, 0, 65537, 589841, 0, 65537, 589842, 0, 65538, 589843, 1, 65539, 589844, 1, 65541, 655360, 1, 65539, 655361, 1, 65541, 655362, 0, 65536, 655363, 0, 65537, 655364, 0, 65537, 655365, 0, 65537, 655366, 0, 65537, 655367, 0, 65537, 655368, 0, 65537, 655369, 0, 65537, 655370, 0, 65537, 655371, 0, 65537, 655372, 0, 65537, 655373, 0, 65537, 655374, 0, 65537, 655375, 0, 65537, 655376, 0, 65537, 655377, 0, 65537, 655378, 0, 65538, 655379, 1, 65539, 655380, 1, 65538, 720896, 1, 65536, 720897, 1, 65541, 720898, 0, 65536, 720899, 0, 65537, 720900, 0, 65537, 720901, 0, 65537, 720902, 0, 65537, 720903, 0, 65537, 720904, 0, 65537, 720905, 0, 65537, 720906, 0, 65537, 720907, 0, 65537, 720908, 0, 65537, 720909, 0, 65537, 720910, 0, 65537, 720911, 0, 65537, 720912, 0, 65537, 720913, 0, 65537, 720914, 0, 65538, 720915, 1, 65539, 720916, 1, 65538, 786432, 1, 65536, 786433, 1, 65538, 786434, 0, 65536, 786435, 0, 65537, 786436, 0, 65537, 786437, 0, 65537, 786438, 0, 65537, 786439, 0, 65537, 786440, 0, 65537, 786441, 0, 65537, 786442, 0, 65537, 786443, 0, 65537, 786444, 0, 65537, 786445, 0, 65537, 786446, 0, 65537, 786447, 0, 65537, 786448, 0, 65537, 786449, 0, 65537, 786450, 0, 65538, 786451, 1, 65539, 786452, 1, 65541, 851968, 1, 65539, 851969, 1, 65538, 851970, 0, 65536, 851971, 0, 65537, 851972, 0, 65537, 851973, 0, 65537, 851974, 0, 65537, 851975, 0, 65537, 851976, 0, 65537, 851977, 0, 65537, 851978, 0, 65537, 851979, 0, 65537, 851980, 0, 65537, 851981, 0, 65537, 851982, 0, 65537, 851983, 0, 65537, 851984, 0, 65537, 851985, 0, 65537, 851986, 0, 65538, 851987, 1, 65536, 851988, 1, 65541, 917504, 1, 65539, 917505, 1, 65541, 917506, 0, 65536, 917507, 0, 65537, 917508, 0, 65537, 917509, 0, 65537, 917510, 0, 65537, 917511, 0, 65537, 917512, 0, 65537, 917513, 0, 65537, 917514, 0, 65537, 917515, 0, 65537, 917516, 0, 65537, 917517, 0, 65537, 917518, 0, 65537, 917519, 0, 65537, 917520, 0, 65537, 917521, 0, 65537, 917522, 0, 65538, 917523, 1, 65539, 917524, 1, 65541, 983040, 1, 65536, 983041, 1, 65541, 983042, 0, 65536, 983043, 0, 65537, 983044, 0, 65537, 983045, 0, 65537, 983046, 0, 65537, 983047, 0, 65537, 983048, 0, 65537, 983049, 0, 65537, 983050, 0, 65537, 983051, 0, 65537, 983052, 0, 65537, 983053, 0, 65537, 983054, 0, 65537, 983055, 0, 65537, 983056, 0, 65537, 983057, 0, 65537, 983058, 0, 65538, 983059, 1, 65539, 983060, 1, 65538, 1048576, 1, 65536, 1048577, 1, 65541, 1048578, 0, 65536, 1048579, 0, 65537, 1048580, 0, 65537, 1048581, 0, 65537, 1048582, 0, 65537, 1048583, 0, 65537, 1048584, 0, 65537, 1048585, 0, 65537, 1048586, 0, 65537, 1048587, 0, 65537, 1048588, 0, 65537, 1048589, 0, 65537, 1048590, 0, 65537, 1048591, 0, 65537, 1048592, 0, 65537, 1048593, 0, 65537, 1048594, 0, 65538, 1048595, 1, 65536, 1048596, 1, 65541, 1114112, 1, 65536, 1114113, 1, 65538, 1114114, 0, 65536, 1114115, 0, 65537, 1114116, 0, 65537, 1114117, 0, 65537, 1114118, 0, 65537, 1114119, 0, 65537, 1114120, 0, 65537, 1114121, 0, 65537, 1114122, 0, 65537, 1114123, 0, 65537, 1114124, 0, 65537, 1114125, 0, 65537, 1114126, 0, 65537, 1114127, 0, 65537, 1114128, 0, 65537, 1114129, 0, 65537, 1114130, 0, 65538, 1114131, 1, 65539, 1114132, 1, 65538, 1179648, 1, 65539, 1179649, 1, 65538, 1179650, 0, 131072, 1179651, 0, 131073, 1179652, 0, 131073, 1179653, 0, 131073, 1179654, 0, 131073, 1179655, 0, 131073, 1179656, 0, 131073, 1179657, 0, 131073, 1179658, 0, 131073, 1179659, 0, 131073, 1179660, 0, 131073, 1179661, 0, 131073, 1179662, 0, 131073, 1179663, 0, 131073, 1179664, 0, 131073, 1179665, 0, 131073, 1179666, 0, 131074, 1179667, 1, 65539, 1179668, 1, 65538, 1245184, 1, 65536, 1245185, 1, 1048576, 1245186, 1, 4, 1245187, 1, 4, 1245188, 1, 1, 1245189, 1, 1, 1245190, 1, 4, 1245191, 1, 1, 1245192, 1, 4, 1245193, 1, 4, 1245194, 1, 1, 1245195, 1, 1, 1245196, 1, 1, 1245197, 1, 1, 1245198, 1, 1, 1245199, 1, 1, 1245200, 1, 1, 1245201, 1, 4, 1245202, 1, 4, 1245203, 1, 1048583, 1245204, 1, 65541, 1310720, 1, 131072, 1310721, 1, 131076, 1310722, 1, 131073, 1310723, 1, 131073, 1310724, 1, 131073, 1310725, 1, 131076, 1310726, 1, 131073, 1310727, 1, 131076, 1310728, 1, 131073, 1310729, 1, 131073, 1310730, 1, 131076, 1310731, 1, 131076, 1310732, 1, 131073, 1310733, 1, 131073, 1310734, 1, 131073, 1310735, 1, 131076, 1310736, 1, 131076, 1310737, 1, 131073, 1310738, 1, 131076, 1310739, 1, 131073, 1310740, 1, 131074 )

[node name="ItemsContainer" type="Node" parent="."]

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 511.166, 456.842 )

[node name="TopLeft" type="Node2D" parent="."]
position = Vector2( 89.8455, 87.6524 )

[node name="BottomRight" type="Node2D" parent="."]
position = Vector2( 886.359, 887.584 )

[node name="ItemSpawnTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="SpeedUpTimer" type="Timer" parent="."]

[node name="HUD" parent="." instance=ExtResource( 2 )]

[node name="MainMenu" parent="." instance=ExtResource( 4 )]

[node name="SoundEffects" type="AudioStreamPlayer" parent="."]

[node name="Music" type="AudioStreamPlayer" parent="."]

[connection signal="timeout" from="ItemSpawnTimer" to="." method="_on_ItemSpawnTimer_timeout"]
[connection signal="timeout" from="SpeedUpTimer" to="." method="_on_SpeedUpTimer_timeout"]
[connection signal="start" from="MainMenu" to="." method="_on_MainMenu_start"]
